Changes to initial state

--- a/tox.ini
+++ b/tox.ini
@@ -9,12 +9,14 @@ envlist =
     min-versions
 skip_missing_interpreters = True
 
+
 [testenv]
 deps =
     -r requirements/tests.txt
     -r requirements/examples.txt
 commands =
-    pytest -v
+    pytest -v {posargs}
+
 
 # test with minimal dependencies
 # make sure no extra dependencies are introduced
